# AI-Engineering-Journey

./: .gitignore  pyproject.toml
projects/bank-analyzer/: README.md  REVIEW.md  app.py  model.joblib  pyproject.toml  test_ofx.py
projects/bank-analyzer/data/: sample.ofx  sample.qif  sample_transactions.csv
projects/bank-analyzer/src/: analyzer.py  file_parser.py  pdf_report.py  train_model.py
projects/bank-analyzer/tests/: conftest.py  test_analyzer.py
projects/game-review-analyzer/: app.py  main.py  pyproject.toml
projects/game-review-analyzer/src/: analyzer.py
